refs #316
Added testmenu to start jd either with a custom languagefile, or in -trdebug  KEY MOde

git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@7395 ebf7c1c2-ba36-0410-9fe8-c592906822b4